# gnuscreen

./: README.md  pyproject.toml  setup.cfg
src/gnuscreen/: __init__.py  main.py
